# SciComp-project

./: Cargo.toml  Presentatio_Template.pptx  README.md  move_corners  move_ud_edges  neural_network.rs  notes.txt  plotter.py
RL/: q-learning.py  rubiks.py  run.py  visualize.py
csv_files/: algorithm_comparison.csv  ida_performance_0.csv  ida_performance_1.csv  ida_performance_10.csv  ida_performance_11.csv  ida_performance_12.csv  ida_performance_13.csv  ida_performance_14.csv  ida_performance_15.csv  ida_performance_16.csv  ida_performance_17.csv  ida_performance_18.csv  ida_performance_19.csv  ida_performance_2.csv  ida_performance_3.csv  ida_performance_4.csv  ida_performance_5.csv  ida_performance_6.csv  ida_performance_7.csv  ida_performance_8.csv  ida_performance_9.csv
csv_files/algorithm_comparison/: algorithm_comparison0.csv  algorithm_comparison1.csv  algorithm_comparison10.csv  algorithm_comparison11.csv  algorithm_comparison12.csv  algorithm_comparison13.csv  algorithm_comparison14.csv  algorithm_comparison15.csv  algorithm_comparison16.csv  algorithm_comparison17.csv  algorithm_comparison18.csv  algorithm_comparison19.csv  algorithm_comparison2.csv  algorithm_comparison3.csv  algorithm_comparison4.csv  algorithm_comparison5.csv  algorithm_comparison6.csv  algorithm_comparison7.csv  algorithm_comparison8.csv  algorithm_comparison9.csv
csv_files/bfs_performance/: bfs_performance_0.csv  bfs_performance_1.csv  bfs_performance_10.csv  bfs_performance_11.csv  bfs_performance_12.csv  bfs_performance_13.csv  (+15 more)
src/: lib.rs  main.rs
tests/: integration.rs
(+244 files in other folders)
