[package]
name = "SciComp-project"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
eframe = "0.29.1"
bevy = "0.11.2"
umya-spreadsheet = "0.6"
rayon = "1.8"