[package]
name = "SciComp-project"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.0"
bevy_egui = "0.31"
bevy-inspector-egui = "0.28.0"
umya-spreadsheet = "0.6"
rayon = "1.8"
rand = "0.8.5"
futures-lite = "2.6.0"
egui_flex = "0.2.0"